kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: links
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 1
  selector:
    matchLabels:
      app: links
  template:
    metadata:
      labels:
        app: links
    spec:
      containers:
      - name: links
        image: CONTAINER_IMAGE
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 10m
            memory: 10Mi
        ports:
        - containerPort: 80
