kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: links
spec:
  type: ClusterIP
  selector:
    app: links
  ports:
  - port: 80
    targetPort: 80
